종목코드 테이블 교체

--- a/notebook/Finance.ipynb
+++ b/notebook/Finance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -33,75 +33,92 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>CJ</td>\n",
-       "      <td>001040</td>\n",
+       "      <td>3S</td>\n",
+       "      <td>060310</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>CJ씨푸드</td>\n",
-       "      <td>011150</td>\n",
+       "      <td>AJ네트웍스</td>\n",
+       "      <td>095570</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>HSD엔진</td>\n",
-       "      <td>082740</td>\n",
+       "      <td>AJ렌터카</td>\n",
+       "      <td>068400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>KG케미칼</td>\n",
-       "      <td>001390</td>\n",
+       "      <td>AK홀딩스</td>\n",
+       "      <td>006840</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>OCI</td>\n",
-       "      <td>010060</td>\n",
+       "      <td>APS홀딩스</td>\n",
+       "      <td>054620</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    name    code\n",
-       "0     CJ  001040\n",
-       "1  CJ씨푸드  011150\n",
-       "2  HSD엔진  082740\n",
-       "3  KG케미칼  001390\n",
-       "4    OCI  010060"
+       "     name    code\n",
+       "0      3S  060310\n",
+       "1  AJ네트웍스  095570\n",
+       "2   AJ렌터카  068400\n",
+       "3   AK홀딩스  006840\n",
+       "4  APS홀딩스  054620"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "code_df = pd.read_html('http://kind.krx.co.kr/corpgeneral/corpList.do?method=download&searchType=13', header=0)[0] \n",
-    "# 종목코드가 6자리이기 때문에 6자리를 맞춰주기 위해 설정해줌 \n",
-    "code_df.종목코드 = code_df.종목코드.map('{:06d}'.format) # 우리가 필요한 것은 회사명과 종목코드이기 때문에 필요없는 column들은 제외해준다. \n",
-    "code_df = code_df[['회사명', '종목코드']] # 한글로된 컬럼명을 영어로 바꿔준다. \n",
-    "code_df = code_df.rename(columns={'회사명': 'name', '종목코드': 'code'})\n",
     "\n",
-    "code_df.head()"
+    "#1. http://marketdata.krx.co.kr/contents/MKD/04/0406/04060100/MKD04060100.jsp에서 excel download -> csv 변환\n",
+    "code_df = pd.read_csv('../data/data.csv')\n",
+    "\n",
+    "# code_df = pd.read_html('http://kind.krx.co.kr/corpgeneral/corpList.do?method=download&searchType=13', header=0)[0] \n",
+    "#  종목코드가 6자리이기 때문에 6자리를 맞춰주기 위해 설정해줌 \n",
+    "\n",
+    "code_df.종목코드 = code_df.종목코드.map('{:06d}'.format)\n",
+    "# 우리가 필요한 것은 회사명과 종목코드이기 때문에 필요없는 column들은 제외해준다. \n",
+    "code_df = code_df[['기업명', '종목코드']]\n",
+    "# 한글로된 컬럼명을 영어로 바꿔준다. \n",
+    "code_df = code_df.rename(columns={'기업명': 'name', '종목코드': 'code'})\n",
+    "\n",
+    "code_df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                               \r",
+      "\r",
+      "N/A% (0 of 416) |                        | Elapsed Time: 0:00:00 ETA:  --:--:--"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "요청 URL = http://finance.naver.com/item/sise_day.nhn?code=215600\n"
+      "요청 URL = http://finance.naver.com/item/sise_day.nhn?code=060310\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100% (54 of 54) |########################| Elapsed Time: 0:00:13 Time:  0:00:13\n"
+      " 99% (413 of 416) |##################### | Elapsed Time: 0:01:25 ETA:   0:00:00"
      ]
     }
    ],
@@ -126,7 +143,7 @@
     "    return url, int(max_page[max_page.rfind('page=')+5:])\n",
     "\n",
     "# 신라젠의 일자데이터 url 가져오기 \n",
-    "item_name='신라젠' \n",
+    "item_name='3S' \n",
     "url, max_page = get_url(item_name, code_df) \n",
     "# 일자 데이터를 담을 df라는 DataFrame 정의 \n",
     "df = pd.DataFrame() # 1페이지에서 20페이지의 데이터만 가져오기 \n",
